# nfx-meta

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-windows-mingw.yml  build-windows-msvc.yml
benchmark/: CMakeLists.txt  README.md
benchmark/containers/: BM_ChdHashMap.cpp  BM_HashMap.cpp  BM_StringMap.cpp  BM_StringSet.cpp
benchmark/core/: BM_Hashing.cpp
benchmark/string/: BM_Splitter.cpp  BM_StringBuilderPool.cpp  BM_StringUtilities.cpp
cmake/: nfx-core-config.cmake.in  nfx-meta-config.cmake.in  nfxCoreBuildConfig.cmake  nfxCoreConfig.cmake  nfxCoreDependencies.cmake  nfxCoreInstall.cmake  nfxCorePackaging.cmake  nfxCoreSources.cmake  nfxCoreVersion.rc.in  nfxMetaBuildConfig.cmake  nfxMetaDependencies.cmake  nfxMetaInstall.cmake  nfxMetaPackaging.cmake  nfxMetaSources.cmake  nfxMetaVersion.rc.in
doc/: CMakeLists.txt
include/nfx/: config.h
include/nfx/containers/: ChdHashMap.h  ChdHashMap.inl  HashMap.h  HashMap.inl  StringFunctors.h  StringFunctors.inl  StringMap.h  StringMap.inl  StringSet.h  StringSet.inl
include/nfx/containers/constants/: ChdConstants.h
include/nfx/containers/functors/: HashMapHashFunctor.h  HashMapHashFunctor.inl  StringFunctors.h  StringFunctors.inl
include/nfx/core/: CPU.h  Hashing.h
include/nfx/core/hashing/: Hash.h  Hash.inl
include/nfx/datatypes/: Decimal.h  Decimal.inl  Int128.h  Int128.inl
include/nfx/datatypes/constants/: DecimalConstants.h  Int128Constants.h
include/nfx/detail/containers/: ChdHashMap.inl  HashMap.inl  StringMap.inl  StringSet.inl
include/nfx/detail/containers/functors/: HashMapHashFunctor.inl  StringFunctors.inl
include/nfx/detail/core/: Hashing.inl
include/nfx/detail/core/hashing/: Hash.inl
include/nfx/detail/datatypes/: Decimal.inl  Int128.inl
include/nfx/detail/memory/: LruCache.inl
include/nfx/detail/serialization/json/: Serializer.inl
include/nfx/detail/string/: Splitter.inl  StringBuilderPool.inl  Utils.inl
include/nfx/detail/time/: DateTime.inl
include/nfx/memory/: LruCache.h  MemoryCache.h  MemoryCache.inl
include/nfx/serialization/json/: ArrayEnumerator.h  Document.h  FieldEnumerator.h  SchemaValidator.h  SerializationTraits.h  Serializer.h
include/nfx/string/: Splitter.h  Splitter.inl  StringBuilderPool.h  StringViewSplitter.h  StringViewSplitter.inl  Utils.h  Utils.inl
include/nfx/time/: DateTime.h  DateTime.inl
include/nfx/time/constants/: DateTimeConstants.h
samples/: CMakeLists.txt  Sample_Datatypes.cpp  Sample_FinancialWithTimestamps.cpp  Sample_LruCache.cpp  Sample_MemoryCache.cpp  Sample_StringContainers.cpp  Sample_StringUtils.cpp  Sample_StringViewSplitter.cpp
samples/containers/: Sample_StringContainers.cpp
samples/datatypes/: Sample_Datatypes.cpp
samples/memory/: Sample_LruCache.cpp
samples/realworld/: Sample_FinancialWithTimestamps.cpp
samples/serialization/json/: Sample_JSONArrayEnumerator.cpp  Sample_JSONDocument.cpp  Sample_JSONFieldEnumerator.cpp  Sample_JSONPSerializer.cpp  Sample_JSONPointer.cpp  Sample_JSONSchemaValidator.cpp
samples/string/: Sample_StringBuilder.cpp  Sample_StringSplitter.cpp
samples/time/: Sample_DateTime.cpp
src/datatypes/: Decimal.cpp  Int128.cpp
src/serialization/json/: ArrayEnumerator.cpp  ArrayEnumerator_impl.cpp  ArrayEnumerator_impl.h  Document.cpp  Document_impl.cpp  Document_impl.h  FieldEnumerator.cpp  FieldEnumerator_impl.cpp  FieldEnumerator_impl.h  SchemaValidator.cpp  SchemaValidator_impl.cpp  SchemaValidator_impl.h
src/string/: DynamicStringBufferPool.cpp  DynamicStringBufferPool.h  DynamicStringBuffer_impl.cpp  DynamicStringBuffer_impl.h  StringBuilderPool.cpp
src/time/: DateTime.cpp
test/: CMakeLists.txt
test/containers/: TESTS_ChdHashMap.cpp  TESTS_HashMap.cpp  TESTS_StringFunctors.cpp  TESTS_StringMap.cpp  TESTS_StringSet.cpp
test/datatypes/: TESTS_Decimal.cpp  TESTS_Int128.cpp
test/memory/: TESTS_LruCache.cpp
test/serialization/json/: TESTS_JSONArrayEnumerator.cpp  TESTS_JSONArrays.cpp  TESTS_JSONDocument.cpp  TESTS_JSONFieldEnumerator.cpp  TESTS_JSONObjects.cpp  TESTS_JSONSchemaValidator.cpp  TESTS_JSONSerializer.cpp
test/string/: TESTS_StringBuilderPool.cpp  TESTS_StringSplitter.cpp  TESTS_StringUtils.cpp
test/time/: TESTS_DateTime.cpp
tests/: CMakeLists.txt
tests/containers/: TESTS_ChdHashMap.cpp  TESTS_HashMap.cpp
tests/datatypes/: TESTS_Decimal.cpp
tests/memory/: TESTS_MemoryCache.cpp
tests/string/: TESTS_StringSplitter.cpp  TESTS_StringUtils.cpp  TESTS_StringViewSplitter.cpp
